# agent-skills

asia-bitumen-daily/: .env.example  .gitignore  SKILL.md  pyproject.toml  test_hnxcl_fonts.py
asia-bitumen-daily/.agents/skills/asia-bitumen-daily/scripts/: hnxcl.html  hnxcl.py
asia-bitumen-daily/docs/superpowers/plans/: 2026-04-16-argus-download-hardening.md
asia-bitumen-daily/scripts/: bootstrap_hnxcl_uv.sh  ding.ts  hnxcl.html  hnxcl.py  requirements-hnxcl.txt  run_hnxcl_uv.sh  verify_html_pdf.py
asia-bitumen-daily/tests/: test_download_hardening.py  test_report_normalization.py  test_verified_text_fallback.py
brent-72h-derivatives-report/: SKILL.md
brent-72h-derivatives-report/evals/: evals.json
brent-72h-research/: AGENTS.md  SKILL.md
brent-72h-research/assets/: market_snapshot.template.json
brent-72h-research/references/: input-schema.md
brent-72h-research/scripts/: agent_browser_snapshot_builder.py  fetch_public_data.py  run_report.py  tradingview_agent_browser_poc.py
brent-72h-research/tests/: test_fetch_public_data.py  test_run_report.py
