[project]
name = "asia-bitumen-daily"
version = "0.1.0"
description = "Argus Asia Bitumen Daily fetch, fallback, and report generation workflow."
requires-python = ">=3.9,<3.14"
dependencies = [
  "httpx[socks]>=0.28.1",
  "openai>=1.30.0",
  "playwright>=1.45.0",
  "pymupdf>=1.24.0",
  "requests>=2.31.0",
  "socksio>=1.0.0",
]

[tool.uv]
package = false
